fix z-index issues with toast bar

--- a/src/app.css
+++ b/src/app.css
@@ -451,7 +451,7 @@ body {
 	display: flex;
 	align-items: center;
 	color: var(--font-toast);
-	z-index: 1;
+	z-index: 2;
 	padding-left: 30px;
 	background-repeat: no-repeat;
 	background-size: 15px;
